# C07-Projeto-GestaoDeLivraria

./: .gitignore  Livraria.sql  ProjetoC07 1.mwb  README.md
GestaoLivraria/: pyproject.toml
GestaoLivraria/src/: main.py
GestaoLivraria/src/dao/: dao_autor.py  dao_cliente.py  dao_cliente_has_pedido.py  dao_editora.py  dao_livro.py  dao_pedido.py  dao_pedido_has_livro.py
GestaoLivraria/src/menus/: MenuAtor.py  MenuCliente.py  MenuEditora.py  MenuLivro.py  MenuPedido.py
GestaoLivraria/src/models/: autor.py  cliente.py  cliente_has_livro.py  cliente_has_pedido.py  editora.py  livro.py  pedido.py
GestaoLivraria/src/utils/: conection.py  criar_tabelas.py
GestaoLivraria/teoria/: Livraria.sql
GestaoLivraria/tests/: test_autor.py  test_autor_integrado.py
GestãoDeLivraria/: .gitignore  main.py
GestãoDeLivraria/DAO/: AutorDAO.py  ClienteDAO.py  ConsultasDAO.py  EditoraDAO.py  LivroDAO.py  PedidoDAO.py
GestãoDeLivraria/Menu/: menu_sistema.py
GestãoDeLivraria/Menu/MenuEspecificos/: menu_autores.py  menu_clientes.py  menu_consultas.py  menu_editoras.py  menu_livros.py  menu_pedidos.py
GestãoDeLivraria/data/: database_config.py
GestãoDeLivraria/docs/: banco_dados.sql
GestãoDeLivraria/src/: main.py
GestãoDeLivraria/src/dao/: AutorDAO.py  ClienteDAO.py
GestãoDeLivraria/src/menu/: MenuAutor.py  MenuCliente.py  MenuEditora.py
GestãoDeLivraria/src/model/: Autor.py  Cliente.py  Editora.py  Livro.py  Pedido.py
GestãoDeLivraria/src/util/: Conexao.py
